--- a/_/less/forms.less
+++ b/_/less/forms.less
@@ -419,8 +419,8 @@ max-width: 100% !important;
 	}
 	
 	.gform_wrapper textarea.large {
-		//.h(18.7);
-		.h(21.8);
+		.h(13);
+		//.h(21.8);
 	}
 	
 	.gform_wrapper textarea.medium {
@@ -474,6 +474,14 @@ max-width: 100% !important;
 	.no-border;
 	.pad-all(0);	
 	.mag-all(0);
+	}
+	
+	.consent-message {
+	//.pad-top(3);	
+	.bg-col-grayLt;
+	.pad(1.5;1.5;0.5;1.5);
+	.font-size(2);
+	.line-h(2.4);
 	}
 	
 	.gform_wrapper .gform_body {
