--- a/_/less/gravity-forms-bootstrap.less
+++ b/_/less/gravity-forms-bootstrap.less
@@ -197,6 +197,10 @@ figure.alignnone {
 	float: left;
 	width: 50%;
 }
+.gform_wrapper.two-column_wrapper ul.gform_fields.full-width {
+display: block;
+clear: both;	
+}
 .gform_wrapper.two-column_wrapper ul.gform_column li.gsection:first-child {
 	display: none;
 }
