--- a/_/less/forms.less
+++ b/_/less/forms.less
@@ -790,6 +790,14 @@ overflow: hidden;
 			.ginput_container {
 			.mag-top(0);	
 			}
+			
+			&.consent_message {
+			//.pad-top(3);	
+			.bg-col-grayLt;
+			.pad(1.5;1.5;0;1.5);
+			.font-size(2);
+			.line-h(2.4);
+			}
 		}
 		
 		input[type="text"],
