--- a/_/less/bootstrap.less
+++ b/_/less/bootstrap.less
@@ -255,15 +255,14 @@ td,th {
 		border:1px solid #ddd!important;
 	}
 }
-
 @font-face {
 	font-family:'Glyphicons Halflings';
-	src:url(wp-content/themes/tlwsolicitors-desktop-v6/_/css/fonts/fonts/glyphicons-halflings-regular.eot);
-	src:url(wp-content/themes/tlwsolicitors-desktop-v6/_/css/fonts/glyphicons-halflings-regular.eot?#iefix) format("embedded-opentype)",
-	"url(wp-content/themes/tlwsolicitors-desktop-v6/_/css/fonts/glyphicons-halflings-regular.woff2") format("woff2)",
-	"url(wp-content/themes/tlwsolicitors-desktop-v6/_/css//glyphicons-halflings-regular.woff") format("woff)",
-	"url(wp-content/themes/tlwsolicitors-desktop-v6/_/css//glyphicons-halflings-regular.ttf") format("truetype)",
-	"url(wp-content/themes/tlwsolicitors-desktop-v6/_/css//glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg");
+	src:url('/wp-content/themes/tlwsolicitors-desktop-v6/_/css/fonts/glyphicons-halflings-regular.eot');
+	src:url('/wp-content/themes/tlwsolicitors-desktop-v6/_/css/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
+		url('/wp-content/themes/tlwsolicitors-desktop-v6/_/css/fonts/glyphicons-halflings-regular.woff2') format('woff2'),
+		url('/wp-content/themes/tlwsolicitors-desktop-v6/_/css/fonts/glyphicons-halflings-regular.woff') format('woff'),
+		url('/wp-content/themes/tlwsolicitors-desktop-v6/_/css/fonts/glyphicons-halflings-regular.ttf') format('truetype'),
+		url('/wp-content/themes/tlwsolicitors-desktop-v6/_/css/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 
 .glyphicon {
