Update law awards banner just for front page

--- a/_/less/sections.less
+++ b/_/less/sections.less
@@ -1,3 +1,60 @@
+@import url('https://fonts.googleapis.com/css?family=Oswald:700');
+
+#awards-banner {
+.mag-bot(3);
+	
+	#awards-banner-inner {
+	.h(8);
+	.bg-col(@awardsGreen);	
+	}
+	
+	.inner-left, .inner-right {	
+	.h(8);
+	}
+	
+	.inner-left {
+	width: 67%;
+	.fleft;	
+	.bg-col(@wht);
+	.bg-img('law-awards-left-bg.png');
+	.bg-repeat(no-repeat);
+	background-position: left center;
+	
+		.nla-logo {
+		.fleft;
+		.h(8);
+		.w(19.5);
+		.mag-left(14);
+		.bg-img('northern-law-awards-logo.png');
+		.bg-repeat(no-repeat);
+		background-position: left center;
+		}
+		
+		.year {
+		.fleft;
+		.col(@awardsGreen);	
+		.font-size(6);	
+		font-family: 'Oswald', 'Impact',  sans-serif;
+		.line-h(6);
+		.pad(0.8;0;0;0);
+		letter-spacing: -1px;
+		}
+	}
+	.inner-right {
+	width: 33%;
+	.fright;	
+	.pad(1.5
+	
+	;2;0;2);
+		.description {
+		.line-h(2.5);
+		.font-size(2.5);
+		.col(@wht);	
+		font-family: 'Oswald', 'Impact',  sans-serif;
+		}
+	}
+}
+
 //BANNER SECTION
 section#slim-top-banner {
 .h(25);
