Add user styles for login page

--- a/_/less/styles.less
+++ b/_/less/styles.less
@@ -45,7 +45,7 @@
 /* User styles */
 /* --------------------------- */
 
-@import url('user-styles.less');
+//@import url('user-styles.less');
 
 /** --------------------------- /
 /* Footer */
