--- a/_/less/user-styles.less
+++ b/_/less/user-styles.less
@@ -1,160 +1,62 @@
-body#login {
-	
-	#user-wrap {	
-	width: 100%;
-	height: 100%;
-	.min-h(40);
-	.bg-img('TLW-offline-bg.png');
-	.bg-repeat(no-repeat);
-	background-position: right center;
-	.bg-col(@grayLt);
-	.bg-size;
-	.rel;
-	
-		@media (min-width: @screen-sm) {
-		.pad-top(0);
-		}
-	}
-	
-	.wrap-center {
-	text-align: center;	
-	.pad-all(2);
-	height: 100%;
-		&:before {
-			content: "";
-			.in-block;
-			height: 100%;
-			vertical-align: middle;
-			margin-right: -0.25em;
-		}
-	}
-		
-	.login {
-	.in-block;
-	vertical-align: middle;
-	.rounded(20px);
-	.pad(9;2;2;2);
-	.trans-bg(white; 0.9);
-	.bg-img('tlw-logo-wide.png');
-	.bg-repeat(no-repeat);
-	background-position: 50% 10px;
-	width: 80%;
-	.max-w(40);
-	.drop-shadow( 0, 0, 20px, 0.5); 	
-		
-		.form-control {
-		.h(5);	
-			&:focus {
-			.border-col(@red);	
-			}
-		}
-		
-		p.submit {
-			input.btn {
-			.bg-col(@gray);
-			.col(white);
-			.caps;
-			.no-border;
-			.font-slab-serif;
-			.h(5);
-			.font-size(2);
-				&:active {
-				.bg-col(lighten(@gray, 10%));
-				}
-			}
-		}
-	
-		.tml-action-links {
-		.mag(2;0;2;0);
-		.pad-all(0);
-		list-style: none;
-		
-			li {
-			.mag-bot(1);	
-			}
-		
-			a {
-			.block;
-			.h(5);
-			.line-h(5);
-			.col(black);
-			text-align: center;
-			.rounded(4px);
-			.no-text-dec;
-			.border(@grayDk, 0.1);
-			.caps;
-			.font-size(1.4);
-				&:active {
-				.bg-col(@gray);
-				.col(white);
-				}	
-			}
-		}
-	}
-	
-}
+@import (reference) 'elements.less';
+@import (reference) 'vars.less';
+@import (reference) 'mixins.less';
 
-.user-links {
-.fixed;
-.bottom(0);	
-.w(20);
-.transition(0.2s, ease-in-out);
+body.login {
+.bg-img('TLW-offline-bg.png');
+background-position: center center;
+.bg-repeat(no-repeat);
+.bg-size;
+.rel;
+min-width: 0;
+color: #444;
+font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+font-size: 13px;
+line-height: 1.4em;
 
-	#user-btn {
+	* {
+	box-sizing: border-box;	
+	}
+	
+	#login {
 	.abs;
-	.right(-5);
-	.bottom(0);
-	.w(5);
-	.h(5);
-	.no-border;
-	.no-rounded;
-	.bg-col(@red);
-	.col(white);
-		&:active {
-		.col(@grayDk);	
-		}
-	}
-
-	&.open {
-	.left(0);	
-		#user-btn {
-		.col(@grayDk);
-			&:active {
-			.col(white);
+	.top(5);
+	.left(5);	
+	.pad-all(2);
+	.mag-left(0);
+	.bg-col(@wht);
+	.rounded(20px);
+	.drop-shadow(0, 0, 20px, 0.5);
+	.w(36);
+	
+		h1 {
+		.h(8);
+		.bg-img('tlw-logo-wide.svg');
+		background-position: center top;
+		.bg-repeat(no-repeat);
+		.bg-size(contain);
+			a {
+			.none;	
 			}
 		}
-	}
-	
-	&.closed {
-	.left(-20);	
-	}
-
-	ul {
-	padding-left: 0;
-	list-style: none;
-	.mag-bot(0);
-	.bg-col(@red);
-	.pad-all(1);
-	
-		li {
-		.mag-bot(.1);
-		.mag-top(.1);	
+		
+		form {
+		.pad-all(0);	
+		box-shadow: none;
 		}
-	
-		a {
-		.block;
-		.w(18);
-		.h(3);
-		.line-h(3);
-		.bg-col(@grayDk);
-		.col(white);
-		text-align: center;
-		.no-text-dec;
-			&:active {
-			.col(@grayDk);
-			.bg-col(@grayLt);	
-			}
-		}	
 	}
 	
+	&.wp-core-ui {
+		.button-primary {
+		background: @red;
+		border: none;
+		box-shadow: none;
+		color: #fff;
+		text-decoration: none;
+		text-shadow: none;
+			&:hover, &:active, &:focus {
+			background: @redDk;
+			}	
+		}
+	}	
 }
