Fix critical CSS and add some less files as reference.

--- a/_/less/styles.less
+++ b/_/less/styles.less
@@ -6,10 +6,9 @@
 /* --------------------------- */
 /* Mixins and vars */
 /* --------------------------- */
-
+@import (reference) 'elements.less';
+@import (reference) 'animate.less';
 @import url('bootstrap-select.less');
-@import url('elements.less');
-@import url('animate.less');
 @import url('vars.less');
 @import url('font-awesome.less');
 @import url('mixins.less');
