Update vacancies archive and add banner image.

--- a/_/less/sections.less
+++ b/_/less/sections.less
@@ -391,10 +391,26 @@ section#contact-us-banner {
 	}	
 	
 	.lg-intro {
-		p.lead {
-		.font-size(1.6);
-		.line-h(2.1);	
+		p {
+		.font-size(2);
+		.line-h(2.5);	
 		}
+		
+		hr {
+		.no-border;
+		.rule;	
+		//.mag-bot(2);
+		}
+		
+		img.alignleft {
+		.mag-right(1);
+		.mag-bot(1);	
+		}
+		
+		img.alignright {
+		.mag-left(1);	
+		.mag-bot(1);	
+		}	
 	}
 	
 	.well {
