Add new banner styles for 8 links

--- a/_/less/sections.less
+++ b/_/less/sections.less
@@ -150,7 +150,7 @@ section#top-banner {
 		.fleft;
 		}
 		
-		&.links-total-4 li {
+		&.links-total-4 li, &.links-total-8 li {
 		width: calc(~"100% / 2");		
 		}
 		
@@ -158,6 +158,10 @@ section#top-banner {
 			li:first-child, li:nth-child(2) {
 			width: calc(~"100% / 2");	
 			}	
+		}
+		
+		&.links-total-8 li {
+		width: calc(~"100% / 2");		
 		}
 		
 		span.img {
