Update video banner and section

--- a/_/less/sections.less
+++ b/_/less/sections.less
@@ -103,10 +103,10 @@ section#video-banner {
 	.video-wrapper {
 	.border(@grayDk; 0.1);	
 	.rel;
-	.h(40);
+	.h(45.1);
 	.over-hide;
 		@media screen and (orientation: landscape) {
-		.h(43.5);	
+		.h(50.3);	
 		}
 	}
 	
@@ -886,12 +886,26 @@ section#contact-us-banner {
 		}	
 	}
 	
+	.col-xs-12 {
+	.mag-top(2);
+		.video-wrapper	{
+		.h(45.1);	
+		}
+	}
+	
 	@media screen and (orientation: landscape) {
 		
 		.video-wrapper {
 		.h(22.3);
 		}
+		
+		.col-xs-12 {
+			.video-wrapper	{
+			.h(50.3);	
+			}
+		}
 	}
+	
 	
 }
 
