Remove animate css reference

--- a/_/less/xmas-styles.less
+++ b/_/less/xmas-styles.less
@@ -127,11 +127,13 @@ z-index: 1000;
 		.mag-bot(1);	
 		}
 		
+/*
 		@media only screen and (orientation: landscape)  {
 			ul {
 			.columns(50%, 2, 50px, white, solid, 0px);	
 			}
 		}
+*/
 		
 		ul li {
 		text-align: center;
