--- a/_/less/styles.less
+++ b/_/less/styles.less
@@ -7,7 +7,7 @@
 /* Mixins and vars */
 /* --------------------------- */
 @import (reference) 'elements.less';
-@import (reference) 'animate.less';
+@import url('animate.less');
 @import url('bootstrap-select.less');
 @import url('vars.less');
 @import url('font-awesome.less');
